JBR-4456: add junit tests (from jtreg tests in jbr/test/jdk/jb/java/jcef/*)